--- a/src/browser/styles/home.scss
+++ b/src/browser/styles/home.scss
@@ -7,6 +7,9 @@ $info-reduce: 1280px;
 .home {
   .work {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @media (min-width: $desktop-bottom) {
       padding: 51px;
@@ -15,6 +18,7 @@ $info-reduce: 1280px;
 
   .project {
     width: 100%;
+    max-width: 1578px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,6 +52,7 @@ $info-reduce: 1280px;
   }
 
   .info {
+    max-width: 840px;
     position: relative;
     z-index: 2;
 
